<resources>
    <string name="app_name">NewContactApp</string>
    <string name="action_settings">Settings</string>
    <string name="menu">menuicon</string>
    <string name="contact_list">contact list</string>
    <string name="searchicon">searchicon</string>
    <string name="emailicon">emailicon</string>
    <string name="email">Email</string>
    <string name="chat">chaticon</string>
    <string name="call">callicon</string>
    <string name="nav_back">navBack</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome">Welcome</string>
    <string name="add_text">Add your contact by filling in your personal information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="edit">edit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
