<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardViewGroup"
    android:layout_width="270dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_below="@id/nav_back">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:elevation="40dp"
            android:src="@drawable/femaleavatar"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/profileCard"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/profileImage"
            android:layout_marginTop="-30dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="10dp">

            <RelativeLayout
                android:id="@+id/emailName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">
                <RelativeLayout
                    android:id="@+id/fullNameVG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">
                    <TextView
                        android:id="@+id/cardfName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textSize="14dp"
                        android:text="No " />
                    <TextView
                        android:id="@+id/cardlName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:layout_toEndOf="@id/cardfName"
                        android:layout_marginStart="5dp"
                        android:text="ContactFound" />
                </RelativeLayout>
                <TextView
                    android:id="@+id/cardEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textSize="14dp"
                    android:layout_below="@id/fullNameVG"
                    android:text="default@gmail.com" />
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/socialMediaIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_gravity="bottom|center">

                <ImageView
                    android:id="@+id/emailicon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/email"
                    android:layout_weight="1"
                    android:src="@drawable/email_icon_black"/>
                <ImageView
                    android:id="@+id/chaticon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/chat"
                    android:src="@drawable/chat_icon_black"/>
                <ImageView
                    android:id="@+id/callicon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/call"
                    android:src="@drawable/call_icon_black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


</RelativeLayout>